src/components/organisms/Footer/Footer.scss
@use '../../../styles/utils/variables' as var;
@use '../../../styles/utils/typography' as *;
@use '../../../styles/utils/mixins' as mix;

.footer {
  position: fixed;
  bottom: 0;
  display: flex;
  flex-direction: column;
  gap: 32px;
  align-items: flex-start;
  justify-content: space-between;
  width: 100%;
  min-width: 320px;
  height: 257px;
  padding: 32px 16px;
  background-color: var.$color-white;
  box-shadow: 0 -1px 0 0 var.$color-elements;

  @include mix.on-tablet {
    flex-direction: row;
    align-items: center;
    width: 100%;
    height: 96px;
    padding: 32px 152px;
  }

  &__logo {
    flex-shrink: 0;
  }

  &__list {
    display: flex;
    flex-direction: column;
    gap: 16px;

    @include mix.on-tablet {
      flex-direction: row;
      gap: 64px;
    }
  }

  &__item {
    @extend %uppercase;

    cursor: pointer;
    color: var.$color-secondary;

    a {
      color: var.$color-secondary;
      text-decoration: none;

      &:hover {
        text-decoration: underline;
      }
    }
  }

  &__top-button {
    @extend %buttons;

    align-self: center;
  }
}

